test/syc/bad/initstructexc.c
/*
 * Excess initializer (struct initialization)
 */

struct s {
	int i;
	char c;
};

struct s s1 = { 1, 2, 3 };
